# phonebook

./: classes.py  data.json  dbase.py  main.py  phonebook.db  pyproject.toml
templates/: home.html  phone.html
